# spatialstats

./: LICENSE  README.rst  pyproject.toml  setup.py
docs/: documentation_figures.py
docs/source/: conf.py  index.rst
spatialstats/: __init__.py  correlation.py  generate.py
