[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatialstats"
dynamic = ["version"]
description = "Toolbox for spatial point statistics"
readme = "README.rst"
authors = [
    {name = "Jack Featherstone", email="jack.featherstone@proton.me"},
]

license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.8"
dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
docs = [
    "furo",
    "sphinx_subfigure",
    "numpydoc",
]

[project.urls]
Homepage = "http://www.github.com/jfeatherstone/powerlaw"

[tool.setuptools]
py-modules = ["spatialstats"]

[tool.setuptools_scm]
write_to = "spatialstats/_version.py"
